Fixed bug when team container was visible when team was empty, redesigned display of pokemons that are on the team

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,10 +31,14 @@ input {
 
 .team {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     background: #262626;
     margin: 0 auto;
+}
+
+.teamIcons {
+    padding: 0 30px;
 }
 
 h1 {
