--- a/src/app/components/info-card/info-card.component.css
+++ b/src/app/components/info-card/info-card.component.css
@@ -13,13 +13,15 @@
 }
 
 .info-box {
-    position: relative;
     width: 300px;
     height: 300px;
-    background-color: rgb(7, 75, 90);
-    border: 4px solid lightseagreen;
     margin: 10px;
+}
 
+.attributeBox, .info-box {
+    background-color: rgb(3, 31, 37);
+    border: 4px solid lightseagreen;
+    position:relative;
 }
 
 .imgBox {
@@ -48,11 +50,6 @@
     height: 115px;
 }
 
-.attributeBox {
-    background-color: rgb(7, 75, 90);
-    border: 4px solid lightseagreen;
-    position:relative;
-}
 
 .type {
     display: flex;
